--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
+
 <head>
   <meta charset="utf-8">
   <title>Md Shafkat Samin</title>
@@ -8,17 +9,29 @@
   <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
   <!-- main css -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <!-- default color skin -->
+  <link rel="stylesheet" type="text/css" href="css/skins/color-1.css" />
 </head>
+
 <body>
 
   <!--header start  -->
-  <header></header>
+  <header class="header">
+    <div class="container">
+      <div class="row justify-content-between">
+        <div class="logo"><a href="index.html">S</a></div>
+        <div class="hamburger-btn outer-shadow hover-in-shadow">
+          <span></span>
+        </div>
+      </div>
+    </div>
+  </header>
   <!--header end  -->
 
-<!-- main js -->
-<script src="js/main.js"></script>
-<!-- style switcher js -->
-<script src="js/style-switcher.js"></script>
+  <!-- main js -->
+  <script src="js/main.js"></script>
+  <!-- style switcher js -->
+  <script src="js/style-switcher.js"></script>
 </body>
-</html>
 
+</html>
