nav-menu polished

--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
         <li><a href="#" class="outer-shadow hover-in-shadow">contact</a></li>
       </ul>
     </div>
+    <!-- copyright text -->
+    <p class="copyright-text">&copy; 2020 Md Shafkat Samin</p>
   </nav>
   <!-- navigation menu end -->
+
+
 
   <!-- main js -->
   <script src="js/main.js"></script>
