home section is implemented

--- a/index.html
+++ b/index.html
@@ -46,7 +46,25 @@
   </nav>
   <!-- navigation menu end -->
 
-
+  <!-- home section start -->
+  <section class="home-section section">
+    <div class="container">
+      <div class="row full-screen align-items-center">
+        <div class="home-text">
+          <p>Hello</p>
+          <h2>I'm Samin</h2>
+          <h1>Frontend Developer</h1>
+          <a href="#" class="btn-1 outer-shadow hover-in-shadow">More About Me</a>
+        </div>
+        <div class="home-img">
+          <div class="img-box inner-shadow">
+            <img class="outer-shadow" src="img/samin-bg-removed.png" alt="profile picture" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- home section end -->
 
   <!-- main js -->
   <script src="js/main.js"></script>
