--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="row full-screen align-items-center">
         <div class="home-text">
           <p>Hello</p>
-          <h2>I'm Samin</h2>
+          <h2>I'm Shafkat Samin</h2>
           <h1>Frontend Developer</h1>
           <a href="#" class="btn-1 outer-shadow hover-in-shadow">More About Me</a>
         </div>
@@ -65,6 +65,38 @@
     </div>
   </section>
   <!-- home section end -->
+
+  <!-- about section start -->
+  <div class="about-section section">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2 data-heading="main info">About Me</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="about-img">
+          <div class="img-box inner-shadow">
+            <img class="outer-shadow" src="img/samin-bg-removed.png" alt="profile pic" />
+          </div>
+        </div>
+        <div class="about-info">
+          <p>
+            <span>Hi! My name is Md. Shafkat Samin. I am a Frontend Developer.</span>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim dignissimos quos delectus qui consequatur
+            numquam aperiam ex nostrum autem modi sint cupiditate commodi a facere incidunt, suscipit in nulla
+            perspiciatis.
+            Commodi, sint nihil vitae debitis quibusdam ullam, ipsum illum tempore sit omnis laboriosam ducimus
+          </p>
+          <p>Rem temporibus ab recusandae alias quod explicabo quidem, quibusdam officia odit dolores beatae iste vitae
+            quae sit quos sequi hic totam sint molestiae libero animi! Iure odit fugit repudiandae hic.</p>
+            <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
+            <a href="#" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- about section end -->
 
   <!-- main js -->
   <script src="js/main.js"></script>
