skils section is added staticly

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <!-- home section end -->
 
   <!-- about section start -->
-  <div class="about-section section">
+  <section class="about-section section">
     <div class="container">
       <div class="row">
         <div class="section-title">
@@ -79,6 +79,14 @@
           <div class="img-box inner-shadow">
             <img class="outer-shadow" src="img/samin-bg-removed.png" alt="profile pic" />
           </div>
+          <!-- social links start -->
+          <div class="social-links">
+            <a href="#" class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-linkedin"></i></a>
+          </div>
+          <!-- social links end -->
         </div>
         <div class="about-info">
           <p>
@@ -90,12 +98,89 @@
           </p>
           <p>Rem temporibus ab recusandae alias quod explicabo quidem, quibusdam officia odit dolores beatae iste vitae
             quae sit quos sequi hic totam sint molestiae libero animi! Iure odit fugit repudiandae hic.</p>
-            <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
-            <a href="#" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
+          <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
+          <a href="#" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
         </div>
       </div>
+      <!-- about tabs start -->
+      <div class="row">
+        <div class="about-tabs">
+          <span class="tab-item outer-shadow active" data-target=".skills">skills</span>
+          <span class="tab-item" data-target=".experience">experience</span>
+          <span class="tab-item" data-target=".education">education</span>
+        </div>
+      </div>
+      <!-- about tabs end -->
+      <!-- skills start -->
+      <div class="row">
+        <div class="skills tab-content">
+          <div class="row">
+            <!-- skills item start -->
+            <div class="skill-item" >
+              <p>Html</p>
+              <div class="progress inner-shadow">
+                <div class="progress-bar" style="width: calc(50% - 14px)">
+                  <span>50%</span>
+                </div>
+              </div>
+            </div>
+            <!-- skills item end -->
+            <!-- skills item start -->
+            <div class="skill-item">
+              <p>Css3</p>
+              <div class="progress inner-shadow">
+                <div class="progress-bar" style="width: calc(60% - 14px)">
+                  <span>60%</span>
+                </div>
+              </div>
+            </div>
+            <!-- skills item end -->
+            <!-- skills item start -->
+            <div class="skill-item">
+              <p>JavaScript</p>
+              <div class="progress inner-shadow">
+                <div class="progress-bar" style="width: calc(60% - 14px)">
+                  <span>60%</span>
+                </div>
+              </div>
+            </div>
+            <!-- skills item end -->
+            <!-- skills item start -->
+            <div class="skill-item">
+              <p>Java</p>
+              <div class="progress inner-shadow">
+                <div class="progress-bar" style="width: calc(60% - 14px)">
+                  <span>60%</span>
+                </div>
+              </div>
+            </div>
+            <!-- skills item end -->
+            <!-- skills item start -->
+            <div class="skill-item">
+              <p>React</p>
+              <div class="progress inner-shadow">
+                <div class="progress-bar" style="width: calc(60% - 14px)">
+                  <span>60%</span>
+                </div>
+              </div>
+            </div>
+            <!-- skills item end -->
+            <!-- skills item start -->
+            <div class="skill-item">
+              <p>Sass</p>
+              <div class="progress inner-shadow">
+                <div class="progress-bar" style="width: calc(60% - 14px)">
+                  <span>60%</span>
+                </div>
+              </div>
+            </div>
+            <!-- skills item end -->
+          </div>
+        </div>
+      </div>
+      <!-- skills end -->
     </div>
-  </div>
+  </section>
   <!-- about section end -->
 
   <!-- main js -->
