experience and education is implemeneted

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
       <!-- about tabs end -->
       <!-- skills start -->
       <div class="row">
-        <div class="skills tab-content">
+        <div class="skills tab-content active">
           <div class="row">
             <!-- skills item start -->
-            <div class="skill-item" >
+            <div class="skill-item">
               <p>Html</p>
               <div class="progress inner-shadow">
                 <div class="progress-bar" style="width: calc(50% - 14px)">
@@ -179,6 +179,105 @@
         </div>
       </div>
       <!-- skills end -->
+
+      <!-- experience start -->
+      <div class="row">
+        <div class="experience tab-content">
+          <div class="row">
+            <div class="timeline">
+              <div class="row">
+                <!-- timeline item start -->
+                <div class="timeline-item">
+                  <div class="timeline-item-inner outer-shadow">
+                    <i class="fas fa-briefcase icon"></i>
+                    <span>Sep, 2018 - Present</span>
+                    <h3>full stack developer</h3>
+                    <h4>Company name, Bangladesh</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, voluptatum recusandae
+                      solutaea, eveniet vitae ipsum voluptate maiores iusto deserunt facere nemo mollitia quo voluptatem
+                      distinctio similique enim ullam?</p>
+                  </div>
+                </div>
+                <!-- timeline item end -->
+                <!-- timeline item start -->
+                <div class="timeline-item">
+                  <div class="timeline-item-inner outer-shadow">
+                    <i class="fas fa-briefcase icon"></i>
+                    <span>Sep, 2018 - Present</span>
+                    <h3>full stack developer</h3>
+                    <h4>Company name, Bangladesh</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, voluptatum recusandae
+                      solutaea, eveniet vitae ipsum voluptate maiores iusto deserunt facere nemo mollitia quo voluptatem
+                      distinctio similique enim ullam?</p>
+                  </div>
+                </div>
+                <!-- timeline item end -->
+                <!-- timeline item start -->
+                <div class="timeline-item">
+                  <div class="timeline-item-inner outer-shadow">
+                    <i class="fas fa-briefcase icon"></i>
+                    <span>Sep, 2018 - Present</span>
+                    <h3>full stack developer</h3>
+                    <h4>Company name, Bangladesh</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, voluptatum recusandae
+                      solutaea, eveniet vitae ipsum voluptate maiores iusto deserunt facere nemo mollitia quo voluptatem
+                      distinctio similique enim ullam?</p>
+                  </div>
+                </div>
+                <!-- timeline item end -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- experience end -->
+
+      <!-- education start -->
+      <div class="row">
+        <div class="education tab-content">
+          <div class="row">
+            <div class="timeline">
+              <div class="row">
+                <!-- timeline item start -->
+                <div class="timeline-item">
+                  <div class="timeline-item-inner outer-shadow">
+                    <i class="fas fa-graduation-cap icon"></i>
+                    <span>2016 - 2020</span>
+                    <h3>Bachelor of Technology</h3>
+                    <h4>Computer Science & Enginnering</h4>
+                    <p>National Institute of Technology Silchar</p>
+                  </div>
+                </div>
+                <!-- timeline item end -->
+                <!-- timeline item start -->
+                <div class="timeline-item">
+                  <div class="timeline-item-inner outer-shadow">
+                    <i class="fas fa-graduation-cap icon"></i>
+                    <span>2016 - 2020</span>
+                    <h3>Bachelor of Technology</h3>
+                    <h4>Computer Science & Enginnering</h4>
+                    <p>National Institute of Technology Silchar</p>
+                  </div>
+                </div>
+                <!-- timeline item end -->
+                <!-- timeline item start -->
+                <div class="timeline-item">
+                  <div class="timeline-item-inner outer-shadow">
+                    <i class="fas fa-graduation-cap icon"></i>
+                    <span>2016 - 2020</span>
+                    <h3>Bachelor of Technology</h3>
+                    <h4>Computer Science & Enginnering</h4>
+                    <p>National Institute of Technology Silchar</p>
+                  </div>
+                </div>
+                <!-- timeline item end -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- education end -->
     </div>
   </section>
   <!-- about section end -->
