--- a/index.html
+++ b/index.html
@@ -46,6 +46,47 @@
   </nav>
   <!-- navigation menu end -->
 
+  <!-- effect wrap start -->
+  <div class="effect-wrap">
+    <div class="effect effect-1">
+    </div>
+    <div class="effect effect-2">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="effect effect-3"> 
+    </div>
+    <div class="effect effect-4"> 
+    </div>
+  </div>
+  <!-- effect wrap end -->
+
   <!-- home section start -->
   <section class="home-section section">
     <div class="container">
