services page added

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
       <div></div>
       <div></div>
     </div>
-    <div class="effect effect-3"> 
+    <div class="effect effect-3">
     </div>
-    <div class="effect effect-4"> 
+    <div class="effect effect-4">
     </div>
   </div>
   <!-- effect wrap end -->
@@ -132,13 +132,9 @@
         <div class="about-info">
           <p>
             <span>Hi! My name is Md. Shafkat Samin. I am a Frontend Developer.</span>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim dignissimos quos delectus qui consequatur
-            numquam aperiam ex nostrum autem modi sint cupiditate commodi a facere incidunt, suscipit in nulla
-            perspiciatis.
-            Commodi, sint nihil vitae debitis quibusdam ullam, ipsum illum tempore sit omnis laboriosam ducimus
           </p>
-          <p>Rem temporibus ab recusandae alias quod explicabo quidem, quibusdam officia odit dolores beatae iste vitae
-            quae sit quos sequi hic totam sint molestiae libero animi! Iure odit fugit repudiandae hic.</p>
+          <p>Expertise in developing web pages using React.js, HTML5, CSS3, Bootstrap, SASS, Object-Oriented Javascript,
+            ES6, Java, JSON. Good understanding of Document Object Model and DOM Functions.</p>
           <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
           <a href="#" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
         </div>
@@ -322,6 +318,85 @@
     </div>
   </section>
   <!-- about section end -->
+
+  <!-- services section start -->
+  <section class="service-section section">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2 data-heading="Services">What I do</h2>
+        </div>
+      </div>
+      <div class="row">
+        <!-- service item start-->
+        <div class="service-item">
+          <div class="service-item-inner outer-shadow">
+            <div class="icon inner-shadow">
+              <i class="fas fa-mobile-alt"></i>
+            </div>
+            <h3>Responsive web</h3>
+
+          </div>
+        </div>
+        <!-- service item end-->
+        <!-- service item start-->
+        <div class="service-item">
+          <div class="service-item-inner outer-shadow">
+            <div class="icon inner-shadow">
+              <i class="far fa-window-maximize"></i>
+            </div>
+            <h3>Interactive Web</h3>
+
+          </div>
+        </div>
+        <!-- service item end-->
+        <!-- service item start-->
+        <div class="service-item">
+          <div class="service-item-inner outer-shadow">
+            <div class="icon inner-shadow">
+              <i class="fas fa-laptop-code"></i>
+            </div>
+            <h3>Clean code</h3>
+
+          </div>
+        </div>
+        <!-- service item end-->
+        <!-- service item start-->
+        <div class="service-item">
+          <div class="service-item-inner outer-shadow">
+            <div class="icon inner-shadow">
+              <i class="fab fa-js"></i>
+            </div>
+            <h3>Javascript Coding</h3>
+
+          </div>
+        </div>
+        <!-- service item end-->
+        <!-- service item start-->
+        <div class="service-item">
+          <div class="service-item-inner outer-shadow">
+            <div class="icon inner-shadow">
+              <i class="fas fa-pencil-alt"></i>
+            </div>
+            <h3>Highly customizing</h3>
+          </div>
+        </div>
+        <!-- service item end-->
+        <!-- service item start-->
+        <div class="service-item">
+          <div class="service-item-inner outer-shadow">
+            <div class="icon inner-shadow">
+              <i class="fas fa-headset"></i>
+            </div>
+            <h3>Great Support</h3>
+
+          </div>
+        </div>
+        <!-- service item end-->
+      </div>
+    </div>
+  </section>
+  <!-- services section end -->
 
   <!-- main js -->
   <script src="js/main.js"></script>
