basic git structure added

--- a/index.html
+++ b/index.html
@@ -398,6 +398,207 @@
   </section>
   <!-- services section end -->
 
+  <!-- portfolio section start -->
+  <section class="portfolio-section section">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2 data-heading="Projects">Latest Works</h2>
+        </div>
+      </div>
+      <!-- portfolio filter start -->
+      <div class="row">
+        <div class="portfolio-filter">
+          <span class="filter-item outer-shadow active" data-target="all">
+            all
+          </span>
+          <span class="filter-item" data-target="full-stack-web-app">
+            full stack web app
+          </span>
+          <span class="filter-item" data-target="frontend-web-app">
+            frontend web app
+          </span>
+          <span class="filter-item" data-target="mobile-app">
+            mobile app
+          </span>
+        </div>
+      </div>
+      <!-- portfolio filter end -->
+      <!-- portfolio items start -->
+      <div class="row portfolio-items">
+        <!-- portfolio item start -->
+        <div class="portfolio-item" data-category="full-stack-web-app">
+          <div class="portfolio-item-inner outer-shadow">
+            <div class="protfolio-item-img">
+              <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
+                data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+              <!-- view project btn -->
+              <span class="view-project">view project</span>
+              <!-- portfolio item details start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="descriptiton">
+                    <h3>Project Brief:</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
+                      voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project info</h3>
+                    <ul>
+                      <li>Date - <span>2020</span></li>
+                      <li>Client - <span>xyz</span></li>
+                      <li>Tools - <span>html, css, javascript</span></li>
+                      <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio item details end -->
+              <!-- portfolio items start -->
+              <div class="row portfolio-items">
+                <!-- portfolio item start -->
+                <div class="portfolio-item" data-category="frontend-web-app">
+                  <div class="portfolio-item-inner outer-shadow">
+                    <div class="protfolio-item-img">
+                      <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
+                        data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+                      <!-- view project btn -->
+                      <span class="view-project">view project</span>
+                      <!-- portfolio item details start -->
+                      <div class="portfolio-item-details">
+                        <div class="row">
+                          <div class="descriptiton">
+                            <h3>Project Brief:</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
+                              voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                          </div>
+                          <div class="info">
+                            <h3>Project info</h3>
+                            <ul>
+                              <li>Date - <span>2020</span></li>
+                              <li>Client - <span>xyz</span></li>
+                              <li>Tools - <span>html, css, javascript</span></li>
+                              <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                              <li></li>
+                              <li></li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- portfolio item details end -->
+                      <!-- portfolio items start -->
+                      <div class="row portfolio-items">
+                        <!-- portfolio item start -->
+                        <div class="portfolio-item" data-category="full-stack-web-app">
+                          <div class="portfolio-item-inner outer-shadow">
+                            <div class="protfolio-item-img">
+                              <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
+                                data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+                              <!-- view project btn -->
+                              <span class="view-project">view project</span>
+                              <!-- portfolio item details start -->
+                              <div class="portfolio-item-details">
+                                <div class="row">
+                                  <div class="descriptiton">
+                                    <h3>Project Brief:</h3>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa
+                                      sit minus
+                                      voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                                  </div>
+                                  <div class="info">
+                                    <h3>Project info</h3>
+                                    <ul>
+                                      <li>Date - <span>2020</span></li>
+                                      <li>Client - <span>xyz</span></li>
+                                      <li>Tools - <span>html, css, javascript</span></li>
+                                      <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                                      <li></li>
+                                      <li></li>
+                                    </ul>
+                                  </div>
+                                </div>
+                              </div>
+                              <!-- portfolio item details end -->
+                              <!-- portfolio items start -->
+                              <div class="row portfolio-items">
+                                <!-- portfolio item start -->
+                                <div class="portfolio-item" data-category="full-stack-web-app">
+                                  <div class="portfolio-item-inner outer-shadow">
+                                    <div class="protfolio-item-img">
+                                      <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
+                                        data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+                                      <!-- view project btn -->
+                                      <span class="view-project">view project</span>
+                                      <!-- portfolio item details start -->
+                                      <div class="portfolio-item-details">
+                                        <div class="row">
+                                          <div class="descriptiton">
+                                            <h3>Project Brief:</h3>
+                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio
+                                              ipsa sit minus
+                                              voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                                          </div>
+                                          <div class="info">
+                                            <h3>Project info</h3>
+                                            <ul>
+                                              <li>Date - <span>2020</span></li>
+                                              <li>Client - <span>xyz</span></li>
+                                              <li>Tools - <span>html, css, javascript</span></li>
+                                              <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                                              <li></li>
+                                              <li></li>
+                                            </ul>
+                                          </div>
+                                        </div>
+                                      </div>
+                                      <!-- portfolio item details end -->
+                                      <!-- portfolio items start -->
+                                      <div class="row portfolio-items">
+                                        <!-- portfolio item start -->
+                                        <div class="portfolio-item" data-category="mobile-app">
+                                          <div class="portfolio-item-inner outer-shadow">
+                                            <div class="protfolio-item-img">
+                                              <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
+                                                data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+                                              <!-- view project btn -->
+                                              <span class="view-project">view project</span>
+                                              <!-- portfolio item details start -->
+                                              <div class="portfolio-item-details">
+                                                <div class="row">
+                                                  <div class="descriptiton">
+                                                    <h3>Project Brief:</h3>
+                                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
+                                                      distinctio ipsa sit minus
+                                                      voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                                                  </div>
+                                                  <div class="info">
+                                                    <h3>Project info</h3>
+                                                    <ul>
+                                                      <li>Date - <span>2020</span></li>
+                                                      <li>Client - <span>xyz</span></li>
+                                                      <li>Tools - <span>html, css, javascript</span></li>
+                                                      <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                                                      <li></li>
+                                                      <li></li>
+                                                    </ul>
+                                                  </div>
+                                                </div>
+                                              </div>
+                                              <!-- portfolio item details end -->
+
+                                            </div>
+                                            <p class="portfolio-item-title">personal portfolio</p>
+                                          </div>
+                                        </div>
+                                        <!-- portfolio item end -->
+                                      </div>
+                                      <!-- portfolio items end -->
+                                    </div>
+  </section>
+  <!-- portfolio section end -->
+
   <!-- main js -->
   <script src="js/main.js"></script>
   <!-- style switcher js -->
