basic card design completed

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         <!-- portfolio item start -->
         <div class="portfolio-item" data-category="full-stack-web-app">
           <div class="portfolio-item-inner outer-shadow">
-            <div class="protfolio-item-img">
+            <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
                 data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
               <!-- view project btn -->
@@ -467,7 +467,7 @@
         <!-- portfolio item start -->
         <div class="portfolio-item" data-category="full-stack-web-app">
           <div class="portfolio-item-inner outer-shadow">
-            <div class="protfolio-item-img">
+            <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
                 data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
               <!-- view project btn -->
@@ -501,7 +501,7 @@
         <!-- portfolio item start -->
         <div class="portfolio-item" data-category="full-stack-web-app">
           <div class="portfolio-item-inner outer-shadow">
-            <div class="protfolio-item-img">
+            <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
                 data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
               <!-- view project btn -->
@@ -535,7 +535,7 @@
         <!-- portfolio item start -->
         <div class="portfolio-item" data-category="frontend-web-app">
           <div class="portfolio-item-inner outer-shadow">
-            <div class="protfolio-item-img">
+            <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
                 data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
               <!-- view project btn -->
@@ -570,7 +570,7 @@
         <!-- portfolio item start -->
         <div class="portfolio-item" data-category="mobile-app">
           <div class="portfolio-item-inner outer-shadow">
-            <div class="protfolio-item-img">
+            <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
                 data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
               <!-- view project btn -->
