finally project popup implemented

--- a/index.html
+++ b/index.html
@@ -610,6 +610,38 @@
 
   <!-- portfolio popup start -->
   <div class="pp portfolio-popup">
+    <div class="pp-details">
+      <div class="pp-details-inner">
+        <div class="pp-title">
+          <h2>personal portfolio</h2>
+          <p>Category - <span class="pp-project-category">Full Stack Web App</span></p>
+        </div>
+        <!--  -->
+        <div class="pp-project-details">
+        <div class="row">
+          <div class="description">
+            <h3>Project Brief:</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
+              voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+          </div>
+          <div class="info">
+            <h3>Project info</h3>
+            <ul>
+              <li>Date - <span>2020</span></li>
+              <li>Client - <span>xyz</span></li>
+              <li>Tools - <span>html, css, javascript</span></li>
+              <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+        <!--  -->
+      </div>
+    </div>
+
+    <div class="separator">
+    </div>
+
     <div class="pp-main">
       <div class="pp-main-inner">
         <div class="pp-project-details-btn outer-shadow hover-in-shadow">Project Details <i class="fas fa-plus"></i>
