--- a/index.html
+++ b/index.html
@@ -618,23 +618,22 @@
         </div>
         <!--  -->
         <div class="pp-project-details">
-        <div class="row">
-          <div class="description">
-            <h3>Project Brief:</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
-              voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
-          </div>
-          <div class="info">
-            <h3>Project info</h3>
-            <ul>
-              <li>Date - <span>2020</span></li>
-              <li>Client - <span>xyz</span></li>
-              <li>Tools - <span>html, css, javascript</span></li>
-              <li>Web - <span><a href="#"> www.domain.com</a></span></li>
-            </ul>
+          <div class="row">
+            <div class="description">
+              <h3>Project Brief:</h3>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. ibus vero suscipit maiores odit eveniet dolorem!</p>
+            </div>
+            <div class="info">
+              <h3>Project info</h3>
+              <ul>
+                <li>Date - <span>2020</span></li>
+                <li>Client - <span>xyz</span></li>
+                <li>Tools - <span>html, css, javascript</span></li>
+                <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
         <!--  -->
       </div>
     </div>
@@ -656,6 +655,21 @@
     </div>
   </div>
   <!-- portfolio popup end -->
+
+  <!-- TODO: TESTIMONIAL START-->
+  <!-- TODO: TESTIMONIAL END-->
+
+  <!-- contact section start -->
+  <section class="contact-section section">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2 data-heading="contact">Get In Touch</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- contact section end -->
 
   <!-- main js -->
   <script src="js/main.js"></script>
