basic contact form implemented

--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@
           <div class="row">
             <div class="description">
               <h3>Project Brief:</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. ibus vero suscipit maiores odit eveniet dolorem!</p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. ibus vero suscipit maiores odit eveniet
+                dolorem!</p>
             </div>
             <div class="info">
               <h3>Project info</h3>
@@ -665,6 +666,70 @@
       <div class="row">
         <div class="section-title">
           <h2 data-heading="contact">Get In Touch</h2>
+        </div>
+      </div>
+      <div class="row">
+        <!-- contact item start -->
+        <div class="contact-item">
+          <div class="contact-item-inner">
+            <div class="contact-item-inner outer-shadow">
+              <i class="fas fa-phone"></i>
+              <span>Phone</span>
+              <p>+8801521407520</p>
+            </div>
+          </div>
+        </div>
+        <!-- contact item end -->
+        <!-- contact item start -->
+        <div class="contact-item">
+          <div class="contact-item-inner">
+            <div class="contact-item-inner outer-shadow">
+              <i class="fas fa-envelope"></i>
+              <span>Email</span>
+              <p>samin.shafkat@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <!-- contact item end -->
+        <!-- contact item start -->
+        <div class="contact-item">
+          <div class="contact-item-inner">
+            <div class="contact-item-inner outer-shadow">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Address</span>
+              <p>146, RK Mission Road (2nd lane), Motijheel, Wari-1203, Dhaka</p>
+            </div>
+          </div>
+        </div>
+        <!-- contact item end -->
+      </div>
+      <div class="row">
+        <div class="contact-form">
+          <form action="">
+            <div class="row">
+              <div class="w-50">
+                <div class="input-group outer-shadow hover-in-shadow">
+                  <input type="text" placeholder="Name" class="input-control">
+                </div>
+                <div class="input-group outer-shadow hover-in-shadow">
+                  <input type="email" placeholder="Email" class="input-control">
+                </div>
+                <div class="input-group outer-shadow hover-in-shadow">
+                  <input type="text" placeholder="Subject" class="input-control">
+                </div>
+              </div>
+              <div class="w-50">
+                <div class="input-group outer-shadow hover-in-shadow">
+                  <textarea type="textarea" placeholder="Message" class="input-control"></textarea>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="submit-btn">
+                <button type="submit" class="btn-1 outer-shadow hover-in-shadow">Send Message</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
